test/fixtures/diagnostics/type-checker/positive/generic-named-argument-binding/input.tysh
namespace Samples.TypeChecker.GenericNamedArgumentBinding

import { List } from "System.Collections.Generic"

fun identity<T>(value: T): T = value

fun choose<T>(left: T, right: T): T = left

fun pairLeft<T, U>(left: T, right: U): T = left

fun keepArray<T>(items: T[]): T[] = items

fun keepList<T>(items: List<T>): List<T> = items

fun keepWithPrefix<T>(value: T, prefix: string): T = value

let inferredReordered: string = choose(right: "b", left: "a")
let explicitOrdered: string = choose<string>(left: "a", right: "b")
let explicitMixed: string = choose<string>("a", right: "b")
let mixedTypes: string = pairLeft(right: 1, left: "a")
let sourceNumbers: int[] = [1, 2]
let constructedArray: int[] = keepArray(items: sourceNumbers)
let literalArray: int[] = keepArray(items: [1, 2])
let sourceNames: List<string> = ["a", "b"]
let constructedList: List<string> = keepList(items: sourceNames)
let pipedInferred: string = "value" |> choose(right: "fallback")
let pipedExplicit: int = 1 |> choose<int>(right: 2)
let pipedMixed: int = 1 |> keepWithPrefix(prefix: "n=")
let pipedIdentity: string = "value" |> identity()
